delete color table
