# swagger/api/product/v1/product-api.swagger.json
@@ -299,148 +299,6 @@
         ]
       }
     },
-    "/v1/color": {
-      "get": {
-        "operationId": "ProductApiService_GetColor",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/apiGetColorResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "id",
-            "in": "query",
-            "required": false,
-            "type": "string",
-            "format": "int64"
-          }
-        ],
-        "tags": [
-          "ProductApiService"
-        ]
-      },
-      "delete": {
-        "operationId": "ProductApiService_DeleteColor",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "properties": {}
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "id",
-            "in": "query",
-            "required": false,
-            "type": "string",
-            "format": "int64"
-          }
-        ],
-        "tags": [
-          "ProductApiService"
-        ]
-      },
-      "post": {
-        "operationId": "ProductApiService_CreateColor",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/apiCreateColorResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/apiCreateColorRequest"
-            }
-          }
-        ],
-        "tags": [
-          "ProductApiService"
-        ]
-      }
-    },
-    "/v1/color/list": {
-      "get": {
-        "operationId": "ProductApiService_ListColors",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/apiListColorsResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "tags": [
-          "ProductApiService"
-        ]
-      }
-    },
-    "/v1/echo": {
-      "get": {
-        "operationId": "ProductApiService_Echo",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/apiEchoResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "message",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          }
-        ],
-        "tags": [
-          "ProductApiService"
-        ]
-      }
-    },
     "/v1/final-product": {
       "get": {
         "operationId": "ProductApiService_GetFinalProduct",
@@ -961,26 +819,6 @@
         }
       }
     },
-    "apiCreateColorRequest": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string"
-        }
-      }
-    },
-    "apiCreateColorResponse": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string",
-          "format": "int64"
-        },
-        "name": {
-          "type": "string"
-        }
-      }
-    },
     "apiCreateFinalProductRequest": {
       "type": "object",
       "properties": {
@@ -989,10 +827,6 @@
           "format": "int64"
         },
         "sizeId": {
-          "type": "string",
-          "format": "int64"
-        },
-        "colorId": {
           "type": "string",
           "format": "int64"
         },
@@ -1022,14 +856,6 @@
           "format": "int64"
         },
         "sizeId": {
-          "type": "string",
-          "format": "int64"
-        },
-        "colorId": {
-          "type": "string",
-          "format": "int64"
-        },
-        "price": {
           "type": "string",
           "format": "int64"
         },
@@ -1066,6 +892,13 @@
         "categoryId": {
           "type": "string",
           "format": "int64"
+        },
+        "color": {
+          "type": "string"
+        },
+        "price": {
+          "type": "number",
+          "format": "double"
         }
       }
     },
@@ -1092,6 +925,13 @@
         "categoryId": {
           "type": "string",
           "format": "int64"
+        },
+        "color": {
+          "type": "string"
+        },
+        "price": {
+          "type": "number",
+          "format": "double"
         }
       }
     },
@@ -1120,14 +960,6 @@
         "categoryId": {
           "type": "string",
           "format": "int64"
-        }
-      }
-    },
-    "apiEchoResponse": {
-      "type": "object",
-      "properties": {
-        "message": {
-          "type": "string"
         }
       }
     },
@@ -1169,18 +1001,6 @@
         }
       }
     },
-    "apiGetColorResponse": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string",
-          "format": "int64"
-        },
-        "name": {
-          "type": "string"
-        }
-      }
-    },
     "apiGetFinalProductResponse": {
       "type": "object",
       "properties": {
@@ -1193,14 +1013,6 @@
           "format": "int64"
         },
         "sizeId": {
-          "type": "string",
-          "format": "int64"
-        },
-        "colorId": {
-          "type": "string",
-          "format": "int64"
-        },
-        "price": {
           "type": "string",
           "format": "int64"
         },
@@ -1238,16 +1050,17 @@
           "type": "string",
           "format": "int64"
         },
+        "color": {
+          "type": "string"
+        },
+        "price": {
+          "type": "number",
+          "format": "double"
+        },
         "sizes": {
           "type": "array",
           "items": {
             "$ref": "#/definitions/apiGetSizeResponse"
-          }
-        },
-        "colors": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/apiGetColorResponse"
           }
         }
       }
@@ -1275,6 +1088,13 @@
         "categoryId": {
           "type": "string",
           "format": "int64"
+        },
+        "color": {
+          "type": "string"
+        },
+        "price": {
+          "type": "number",
+          "format": "double"
         }
       }
     },
@@ -1312,17 +1132,6 @@
           "type": "array",
           "items": {
             "$ref": "#/definitions/apiCategory"
-          }
-        }
-      }
-    },
-    "apiListColorsResponse": {
-      "type": "object",
-      "properties": {
-        "colors": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/apiCreateColorResponse"
           }
         }
       }
